fix: do not wrap text in tooltips

--- a/style/components/misc.scss
+++ b/style/components/misc.scss
@@ -220,6 +220,7 @@ textarea {
 // 提示条
 .tooltip {
     pointer-events: none;
+    text-wrap: nowrap;
     @include tooltip-shadow;
     @include border-or-not($outline:false);
 }
